--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ComfyUI
+ComfyUI/
+Media/
+Workflows/
+
+# macOS files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
