Dec 2 - Sync issues with .gitignore...

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "args": [
                 "--api_key",
-                "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"
+                "ADD KEY HERE!"
             ]
         }
     ]
